# commissioner-dashboard

./: .gitignore  style.css
.github/workflows/: build.yml
frontend/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
