[package]
name = "commissioner-dashboard"
version = "1.0.0"
description = "Commissioner Meeting Dashboard — 2026"
authors = ["JM"]
edition = "2021"

[lib]
name = "commissioner_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
